<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<artifactId>shop</artifactId>
		<groupId>ru.shop</groupId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	
	<groupId>ru.shop</groupId>
	<artifactId>forum</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>shop.forum</name>
	<description>Demo project for Spring Boot</description>

	<packaging>jar</packaging>
	
	<properties>
		<java.version>11</java.version>
	</properties>
	
</project>
